--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
             "PTAdmin\\Html\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Zane",
